form and API request

--- a/index.html
+++ b/index.html
@@ -34,6 +34,17 @@
       </div>
     </div>
     <!-- ===============================Header Ends=============================== -->
-    <div class="main"></div>
+    <div class="main">
+      <h1>Is It a Holiday</h1>
+      <div id="form">
+        <form>
+          <label>Input month:</label><br />
+          <input type="text" name="month" placeholder="Enter a month" /><br />
+          <label>Input Day:</label><br />
+          <input type="number" name="day" placeholder="Enter a day" /><br />
+          <input type="submit" value="search" />
+        </form>
+      </div>
+    </div>
   </body>
 </html>
