--- a/index.html
+++ b/index.html
@@ -39,12 +39,100 @@
       <div id="form">
         <form>
           <label>Input month:</label><br />
-          <input type="text" name="month" placeholder="Enter a month" /><br />
+          <input type="number" name="month" placeholder="Enter a month" /><br />
           <label>Input Day:</label><br />
           <input type="number" name="day" placeholder="Enter a day" /><br />
           <input type="submit" value="search" />
         </form>
       </div>
+      <div id="publish"></div>
     </div>
+    <!-- ========================================Article Section============================ -->
+    <div class="Article">
+      <div class="hol">Holidays of United States of America</div>
+      <div class="article1">
+        <a href="https://resolutiondenver.com/history-of-new-years-eve/"
+          ><img class="artImg1" src="./NewYearPic.jpeg" alt="pic1/1"
+        /></a>
+        <a
+          href="https://constitutioncenter.org/blog/how-martin-luther-king-jr-s-birthday-became-a-holiday-3"
+          ><img class="artImg1" src="./MLK1:16Pic.jpeg" alt="pic1/16"
+        /></a>
+        <a href="https://www.britannica.com/topic/Presidents-Day"
+          ><img class="artImg1" src="./presidentDay2:20.jpeg" alt="pic2/20"
+        /></a>
+        <a
+          href="https://www.pbs.org/national-memorial-day-concert/memorial-day/history/"
+          ><img class="artImg1" src="./memorialDay5:29.jpeg" alt="pic5/29"
+        /></a>
+        <a href="https://www.history.com/topics/holidays/july-4th"
+          ><img class="artImg1" src="./IndependenceDay7:4.jpeg" alt="pic7/4"
+        /></a>
+      </div>
+      <div class="article2">
+        <a href="https://www.history.com/topics/holidays/labor-day-1"
+          ><img class="artImg2" src="./laborDay9:4.jpeg" alt="pic9/4"
+        /></a>
+        <a href="https://www.history.com/topics/holidays/columbus-day"
+          ><img class="artImg2" src="./columbusDay10:9.jpeg" alt="pic10/9"
+        /></a>
+        <a
+          href="https://department.va.gov/veterans-day/history-of-veterans-day/"
+          ><img class="artImg2" src="./veteransDay11:10.jpeg" alt="pic11/10"
+        /></a>
+        <a href="https://www.britannica.com/topic/Thanksgiving-Day"
+          ><img class="artImg2" src="./thanksGiving11:23.webp" alt="pic11/23"
+        /></a>
+        <a href="https://www.history.com/topics/christmas/history-of-christmas"
+          ><img class="artImg2" src="./christmasDay12:25.jpeg" alt="pic12/25"
+        /></a>
+      </div>
+      <!-- <div class="article1"></div> -->
+    </div>
+    <!-- ========================================Article Section Ends============================ -->
+    <!-- ========================================Footer Starts============================ -->
+    <div class="footerMain">
+      <div class="footer1">
+        <ul class="mylist">
+          Social media
+          <div class="footer1Item">
+            <a href="https://www.facebook.com/"><li>Facebook</li></a>
+            <img src="./Facebook_logo.png" />
+          </div>
+          <div class="footer1Item">
+            <a href="https://twitter.com/"> <li>Twitter</li></a>
+            <img src="./twitter.jpg" />
+          </div>
+          <div class="footer1Item">
+            <a href="https://www.instagram.com/"> <li>Instagram</li></a>
+            <img src="./InstagramLogoP.webp" />
+          </div>
+          <div class="footer1Item">
+            <a href="https://www.instagram.com/"> <li>LinkedIn</li></a>
+            <img src="./InstagramLogoP.webp" />
+          </div>
+        </ul>
+      </div>
+      <div class="footer2">
+        <ul>
+          Lookup
+          <li class="li-class-1">TERMS OF SERVICE</li>
+          <li class="li-class-1">PRIVACY POLICY</li>
+          <li class="li-class-1">CAREER OPPORTUNITIES</li>
+          <li class="li-class-1">MORE INFORMATION</li>
+        </ul>
+      </div>
+      <div class="footer3">
+        <ul>
+          Contact Us
+          <li class="li-class">CUSTOMER SERVICE</li>
+          <li class="li-class">PHONE</li>
+          <li class="li-class">EMAIL</li>
+          <li class="li-class">P.O. BOX</li>
+        </ul>
+      </div>
+    </div>
+
+    <!-- ========================================Footer Ends============================ -->
   </body>
 </html>
