updated code with md file and organized logo and pic in one flolder

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- ===============================Header=============================== -->
     <div class="Top">
       <div class="Icon">
-        <img src="./flagIcon.jpeg" />
+        <img src="./Images :logo/flagIcon.jpeg" />
         <p>United States Holiday</p>
       </div>
       <div class="navBar">
@@ -34,8 +34,15 @@
           <p><a href="#">Contact us</a></p>
         </div>
         <div class="inputSearch">
-          <input type="search" name="searchItem" placeholder="Search" />
-          <button><img class="searchLogo" src="./searchLogo.png" /></button>
+          <input
+            class="inputSearchField"
+            type="search"
+            name="searchItem"
+            placeholder="Search"
+          />
+          <button>
+            <img class="searchLogo" src="./Images :logo/searchLogo.png" />
+          </button>
         </div>
       </div>
     </div>
@@ -70,39 +77,69 @@
     <div class="Article">
       <div class="article1">
         <a href="https://resolutiondenver.com/history-of-new-years-eve/"
-          ><img class="artImg1" src="./NewYearPic.jpeg" alt="pic1/1"
+          ><img
+            class="artImg1"
+            src="./Images :logo/NewYearPic.jpeg"
+            alt="pic1/1"
         /></a>
         <a
           href="https://constitutioncenter.org/blog/how-martin-luther-king-jr-s-birthday-became-a-holiday-3"
-          ><img class="artImg1" src="./MLK1:16Pic.jpeg" alt="pic1/16"
+          ><img
+            class="artImg1"
+            src="./Images :logo/MLK1:16Pic.jpeg"
+            alt="pic1/16"
         /></a>
         <a href="https://www.britannica.com/topic/Presidents-Day"
-          ><img class="artImg1" src="./presidentDay2:20.jpeg" alt="pic2/20"
+          ><img
+            class="artImg1"
+            src="./Images :logo/presidentDay2:20.jpeg"
+            alt="pic2/20"
         /></a>
         <a
           href="https://www.pbs.org/national-memorial-day-concert/memorial-day/history/"
-          ><img class="artImg1" src="./memorialDay5:29.jpeg" alt="pic5/29"
+          ><img
+            class="artImg1"
+            src="./Images :logo/memorialDay5:29.jpeg"
+            alt="pic5/29"
         /></a>
         <a href="https://www.history.com/topics/holidays/july-4th"
-          ><img class="artImg1" src="./IndependenceDay7:4.jpeg" alt="pic7/4"
+          ><img
+            class="artImg1"
+            src="./Images :logo/IndependenceDay7:4.jpeg"
+            alt="pic7/4"
         /></a>
       </div>
       <div class="article2">
         <a href="https://www.history.com/topics/holidays/labor-day-1"
-          ><img class="artImg2" src="./laborDay9:4.jpeg" alt="pic9/4"
+          ><img
+            class="artImg2"
+            src="./Images :logo/laborDay9:4.jpeg"
+            alt="pic9/4"
         /></a>
         <a href="https://www.history.com/topics/holidays/columbus-day"
-          ><img class="artImg2" src="./columbusDay10:9.jpeg" alt="pic10/9"
+          ><img
+            class="artImg2"
+            src="./Images :logo/columbusDay10:9.jpeg"
+            alt="pic10/9"
         /></a>
         <a
           href="https://department.va.gov/veterans-day/history-of-veterans-day/"
-          ><img class="artImg2" src="./veteransDay11:10.jpeg" alt="pic11/10"
+          ><img
+            class="artImg2"
+            src="./Images :logo/veteransDay11:10.jpeg"
+            alt="pic11/10"
         /></a>
         <a href="https://www.britannica.com/topic/Thanksgiving-Day"
-          ><img class="artImg2" src="./thanksGiving11:23.webp" alt="pic11/23"
+          ><img
+            class="artImg2"
+            src="./Images :logo/thanksGiving11:23.webp"
+            alt="pic11/23"
         /></a>
         <a href="https://www.history.com/topics/christmas/history-of-christmas"
-          ><img class="artImg2" src="./christmasDay12:25.jpeg" alt="pic12/25"
+          ><img
+            class="artImg2"
+            src="./Images :logo/christmasDay12:25.jpeg"
+            alt="pic12/25"
         /></a>
       </div>
       <!-- <div class="article1"></div> -->
@@ -115,19 +152,19 @@
           Social media
           <div class="footer1Item">
             <a href="https://www.facebook.com/"><li>Facebook</li></a>
-            <img src="./Facebook_logo.png" />
+            <img src="./Images :logo/Facebook_logo.png" />
           </div>
           <div class="footer1Item">
             <a href="https://twitter.com/"> <li>Twitter</li></a>
-            <img src="./twitter.jpg" />
+            <img src="./Images :logo/twitter.jpg" />
           </div>
           <div class="footer1Item">
             <a href="https://www.instagram.com/"> <li>Instagram</li></a>
-            <img src="./InstagramLogoP.webp" />
+            <img src="./Images :logo/InstagramLogoP.webp" />
           </div>
           <div class="footer1Item">
             <a href="https://www.linkedin.com/"> <li>LinkedIn</li></a>
-            <img src="./LinkedInPRO.webp" />
+            <img src="./Images :logo/LinkedInPRO.webp" />
           </div>
         </ul>
       </div>
